# cmake_tutorial

./: CMakeLists.txt  algorithms.cpp  create_build.sh  main.cpp
algorithms/: CMakeLists.txt
cmake/: Common.cmake  CompilerOptions.cmake  Conan.cmake  Doxygen.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  algorithms_test.cpp  main.cpp
src/algorithms/: CMakeLists.txt  algorithms.cpp
src/algorithms/include/: algorithms.hpp
src/algorithms_test/: CMakeLists.txt  algorithms_test.cpp
